cluster-cd/apps/base/spotify-sentry/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name spotify-sentry
    app.kubernetes.io/instance: &instance spotify-sentry
    app.kubernetes.io/part-of: *instance
    k8s-app: *name
  name: *name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *instance
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *instance
      annotations:
        backup.velero.io/backup-volumes: data
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: spotify-sentry
          image: 'ghcr.io/rtrox/spotify-sentry-devel:sha-0b78223'
          args:
            - -image-folder=/data/images/
            - -db-location=/data/spotify.db
            - -reconcile-interval=30s
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
        - name: sqlite-debug
          image: keinos/sqlite3:latest
          args:
            - sh
            - -c
            - sleep infinity
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            limits:
              memory: 64Mi
            requests:
              memory: 64Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: spotify-sentry-data
